# ruvector

./: Cargo.toml  README.md
.github/workflows/: coverage.yml  postgres-extension-ci.yml  security.yml
.ruvector/: intelligence.json
benches/: bench_hnsw_genomic.rs
crates/cognitum-gate-tilezero/: Cargo.toml
crates/prime-radiant/: Cargo.toml  README.md
crates/prime-radiant/src/: lib.rs
crates/ruQu/: Cargo.toml  README.md
crates/ruQu/examples/: bell_chsh_test.rs
crates/ruQu/src/: lib.rs  mincut.rs
crates/ruqu-core/src/: backend.rs  lib.rs  stabilizer.rs
crates/ruqu-exotic/examples/: quantum_rag_applications.rs
crates/ruvector-cli/: Cargo.toml
crates/ruvector-cognitive-container/src/: container.rs  witness.rs
crates/ruvector-dag-wasm/: Cargo.toml
crates/ruvector-gnn/src/: cold_tier.rs
crates/ruvector-learning-wasm/tests/: integration.rs
crates/ruvector-mincut/: README.md
crates/ruvector-mincut/src/: lib.rs
crates/ruvector-security/: Cargo.toml
crates/ruvector-security/src/: auth.rs  cors.rs  error.rs  ffi.rs  lib.rs  path.rs  rate_limit.rs
crates/ruvector-server/: Cargo.toml
crates/ruvllm/: Cargo.toml
crates/ruvllm-wasm/: Cargo.toml
crates/rvf/: README.md
crates/rvf/rvf-launch/: Cargo.toml
crates/rvf/rvf-launch/src/: lib.rs
docs/adr/: ADR-002-ruvllm-integration.md  ADR-003-simd-optimization-strategy.md  ADR-013-huggingface-publishing.md
docs/adrs/: 0010fixes.md  0011-security-domain.md  0012-performance-domain.md  0013-code-quality-domain.md  0014-api-bindings-domain.md
examples/benchmarks/: Cargo.toml
examples/edge-net/: Cargo.toml  README.md
npm/: package-lock.json  package.json
tests/wasm-integration/: learning_tests.rs  nervous_system_tests.rs
(+117 files in other folders)
