[package]
name = "ruvector-security"
version = "0.1.0"
edition = "2021"
description = "Security utilities for RuVector - authentication, path validation, rate limiting"
license = "Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
keywords = ["security", "authentication", "validation", "rate-limiting"]
categories = ["authentication", "web-programming"]

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["sync", "time"] }

# Web framework integration
axum = { version = "0.7", optional = true }
tower = { version = "0.5", optional = true }
tower-http = { version = "0.6", features = ["cors"], optional = true }
http = { version = "1.0", optional = true }

# Crypto for token validation
hmac = "0.12"
sha2 = "0.10"
subtle = "2.5"
base64 = "0.22"
rand = "0.8"

# Error handling
thiserror = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Tracing
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1.0", features = ["rt-multi-thread", "macros"] }
tempfile = "3.0"

[features]
default = ["middleware"]
middleware = ["axum", "tower", "tower-http", "http"]
