[package]
name = "rvf-launch"
version = "0.1.0"
edition = "2021"
description = "QEMU microVM launcher for RVF computational containers"
license = "MIT OR Apache-2.0"
repository = "https://github.com/ruvnet/ruvector"
rust-version = "1.87"

[dependencies]
rvf-types = { path = "../rvf-types", features = ["std"] }
rvf-runtime = { path = "../rvf-runtime" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
